[gd_scene load_steps=26 format=2]

[ext_resource path="res://Menus/StartMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/StarBG.png" type="Texture" id=2]
[ext_resource path="res://World/PlanetTexture.png" type="Texture" id=3]
[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Common/Shaders/blur.shader" type="Shader" id=5]
[ext_resource path="res://Menus/IntroShip.png" type="Texture" id=6]
[ext_resource path="res://Menus/Ship.gd" type="Script" id=7]
[ext_resource path="res://Common/circle.png" type="Texture" id=8]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0.0117647, 0.0235294, 0.109804, 1 )
sky_horizon_color = Color( 0.0980392, 0.0196078, 0.160784, 1 )
sky_curve = 0.245888
sky_energy = 0.41
ground_bottom_color = Color( 0.243137, 0.152941, 0.466667, 1 )
ground_horizon_color = Color( 0.243137, 0.0588235, 0.27451, 1 )
ground_curve = 0.134544
sun_energy = 0.0

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
background_color = Color( 0.301961, 0.156863, 0.34902, 1 )
ssao_radius = 128.0
ssao_intensity = 128.0
ssao_light_affect = 0.88
ssao_color = Color( 1, 1, 1, 1 )
glow_enabled = true
glow_intensity = 0.19
glow_strength = 1.33
glow_bloom = 0.64
glow_hdr_threshold = 1.24

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.147692, 0.790769, 0.998462 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.186154 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 10, 30, 40 )
gravity = Vector3( 0, 0, 0 )
color_ramp = SubResource( 4 )
anim_speed = 6.0

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = true
albedo_texture = ExtResource( 2 )

[sub_resource type="QuadMesh" id=7]
material = SubResource( 6 )

[sub_resource type="SphereMesh" id=8]

[sub_resource type="SpatialMaterial" id=9]
vertex_color_use_as_albedo = true
albedo_color = Color( 0.807843, 0.819608, 1, 1 )
albedo_texture = ExtResource( 3 )
emission_enabled = true
emission = Color( 0.254902, 0.415686, 0.72549, 1 )
emission_energy = 0.08
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 5 )
shader_param/blur_amount = 1.0

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.190476, 1 )
colors = PoolColorArray( 1, 1, 1, 0.741176, 0.392157, 0.211765, 1, 0.596078, 0.0745098, 0.0431373, 0.541176, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]
emission_shape = 1
emission_sphere_radius = 0.03
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
scale = 0.77
scale_random = 0.1
scale_curve = SubResource( 14 )
color_ramp = SubResource( 12 )

[sub_resource type="SpatialMaterial" id=16]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 8 )

[sub_resource type="QuadMesh" id=17]
material = SubResource( 16 )
size = Vector2( 0.5, 0.5 )

[node name="MainMenu" type="Spatial"]
script = ExtResource( 4 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )
__meta__ = {
"_editor_description_": "
"
}

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.418124, 0.717149, 0.557557, -0.0196271, 0.60651, -0.794834, -0.908178, -0.343282, -0.239521, -0.0287043, -0.0242759, 0.0137401 )
current = true
fov = 30.0
near = 0.03
far = 300.0

[node name="ShakeTimer" type="Timer" parent="Camera"]
wait_time = 0.5
one_shot = true

[node name="NewShake" type="Timer" parent="Camera"]
wait_time = 0.02

[node name="Particles" type="Particles" parent="."]
transform = Transform( 0.735476, 0.562904, 0.377113, -0.607778, 0.794107, -1.32059e-08, -0.299469, -0.229201, 0.926167, -53.9351, 80.5102, 27.5271 )
amount = 30
lifetime = 12.0
preprocess = 10.0
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 7 )

[node name="PlanetBG" type="CSGMesh" parent="."]
transform = Transform( 8.13728, 4.99637, 2.97003, -4.94602, 8.6361, -0.977072, -3.05313, -0.673913, 9.49864, -27.941, 35.5228, 30.798 )
mesh = SubResource( 8 )
material = SubResource( 9 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.242362, -0.25, 0.937422, 0.12941, 0.965926, 0.224144, -0.961516, 0.0669873, 0.266457, 4.82963, 0, -1.2941 )
light_color = Color( 0.541176, 0.494118, 0.956863, 1 )
light_energy = 0.79

[node name="Blur" type="ColorRect" parent="."]
material = SubResource( 10 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartMenu" parent="." instance=ExtResource( 1 )]
theme = null

[node name="Ship" type="KinematicBody" parent="."]
transform = Transform( 0.158453, 0.808545, -0.566698, 0.17213, 0.542539, 0.822206, 0.972247, -0.227827, -0.0532074, 0.335349, -0.330188, -0.222351 )
script = ExtResource( 7 )

[node name="Ship" type="Sprite3D" parent="Ship"]
transform = Transform( 1, -2.5332e-07, 8.9407e-08, 1.49012e-08, 1, -1.49012e-08, 8.9407e-08, -4.47035e-08, 1, 5.96046e-08, -1.49012e-07, -0.0158504 )
modulate = Color( 0.556863, 1, 0.988235, 1 )
billboard = 1
texture = ExtResource( 6 )

[node name="Particles" type="Particles" parent="Ship"]
transform = Transform( 1, -8.9407e-08, 2.23517e-08, -4.47035e-08, 1, 7.45058e-08, -2.6077e-08, -1.78814e-07, 1, 3.72529e-08, 0, -0.0842271 )
emitting = false
local_coords = false
process_material = SubResource( 15 )
draw_pass_1 = SubResource( 17 )

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="Camera/NewShake" to="." method="_on_NewShake_timeout"]
